--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ var/
 
 credentials.json
 models/
+.DS_Store
+*.txt
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
